[gd_scene load_steps=22 format=2]

[ext_resource path="res://Objects/Friend.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/mirror/Attackm1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/mirror/Attackm2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/mirror/Attackm3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/mirror/Attackm4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/mirror/Attackm5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/mirror/Attackm10.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/mirror/Attackm9.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/mirror/Attackm7.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/mirror/Walkm1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/mirror/Walkm2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/mirror/Walkm3.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/mirror/Walkm4.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/mirror/Walkm5.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/mirror/Walkm6.png" type="Texture" id=15]
[ext_resource path="res://Assets/Images/mirror/Walkm7.png" type="Texture" id=16]
[ext_resource path="res://Assets/Images/mirror/Walkm9.png" type="Texture" id=17]
[ext_resource path="res://Assets/Images/mirror/Walkm8.png" type="Texture" id=18]
[ext_resource path="res://Assets/Images/mirror/Walkm10.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": true,
"name": "Attack",
"speed": 9.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[node name="Path" type="PathFollow2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Walk"
frame = 4
playing = true
flip_h = true
flip_v = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -30, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 1.55848, 3.08645 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
